# Cpp_Lib_For_PSIM

./: CMakeLists.txt  Tarefa 4 codigos PSIM.rar  cpp_psim_lib.cpp  cpp_psim_lib.h
Projetos/: lab-elepot.rar
Projetos/Proj-micro/: Tarefa_3 $25.1.0$.psimsch  Tarefa_3 $26.0.0$.psimsch  Tarefa_3 (backup)1.psimsch  Tarefa_3.psimsch  Tarefa_3.smv  Tarefa_4.psimsch  Tarefa_4.smv
Projetos/Proj-micro/Tarefas/DSP/.theia/: launch.json
Projetos/Proj-micro/Tarefas/DSP/sci_echoback_micro_proc/: .ccsproject  .cproject  .project  sci_ex3_echoback.c
Projetos/Proj-micro/Tarefas/DSP/sci_echoback_micro_proc/.theia/: launch.json
Projetos/Proj-micro/Tarefas/DSP/sci_echoback_micro_proc/CPU1_RAM/: ccsObjs.opt  makefile  sci_echoback_micro_proc.map  sci_echoback_micro_proc.out  sci_echoback_micro_proc_linkInfo.xml  sci_ex3_echoback.d  subdir_rules.mk  subdir_vars.mk
Projetos/Proj-micro/Tarefas/DSP/sci_echoback_micro_proc/CPU1_RAM/.clangd/: compile_commands.json
Projetos/Proj-micro/Tarefas/DSP/sci_echoback_micro_proc/CPU1_RAM/device/: device.d  subdir_rules.mk
Projetos/Proj-micro/Tarefas/DSP/sci_echoback_micro_proc/device/: device.h
Projetos/lab-elepot/: README.md  Teste2.psimsch  bldc_inv.cir  bldc_inv.psimsch  bldc_inv.smv  tests.psimsch  tests.smv
Projetos/lab-elepot/subcircs/: 3-ph-inversor.psimsch  boost.psimsch  buck-boost.psimsch
Tarefa 4 codigos/include/: Serial_utils.h  cpp_psim_lib.h
Tarefa 4 codigos/source/: cpp_psim_lib.cpp
include/: cpp_psim_lib.h
source/: Serial_utils.cpp  cpp_psim_lib.cpp
(+37 files in other folders)
